--- a/test-output/old/Test Suite/methods.html
+++ b/test-output/old/Test Suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d9aa8b">  <td>18/09/14 16:56:22</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:NKpackage.NewTest@1810399e]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@486898233</td>   <td></td> </tr>
-<tr bgcolor="688d64">  <td>18/09/14 16:56:26</td>   <td>4126</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest1.beforeTest()[pri:0, instance:NKpackage.NewTest1@32d992b2]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@486898233</td>   <td></td> </tr>
-<tr bgcolor="d9aa8b">  <td>18/09/14 16:56:30</td>   <td>7494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.NewTest()[pri:0, instance:NKpackage.NewTest@1810399e]">NewTest</td> 
-  <td>pool-1-thread-1@464655139</td>   <td></td> </tr>
-<tr bgcolor="688d64">  <td>18/09/14 16:56:34</td>   <td>12386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest1.NewTest1()[pri:0, instance:NKpackage.NewTest1@32d992b2]">NewTest1</td> 
-  <td>pool-1-thread-1@464655139</td>   <td></td> </tr>
-<tr bgcolor="d9aa8b">  <td>18/09/14 16:56:44</td>   <td>21541</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:NKpackage.NewTest@1810399e]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@486898233</td>   <td></td> </tr>
-<tr bgcolor="688d64">  <td>18/09/14 16:56:46</td>   <td>23530</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest1.afterTest()[pri:0, instance:NKpackage.NewTest1@32d992b2]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@486898233</td>   <td></td> </tr>
+<tr bgcolor="75aa6d">  <td>18/09/23 12:31:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest(java.lang.String)[pri:0, instance:NKpackage.NewTest@4b14c583]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@167727108</td>   <td></td> </tr>
+<tr bgcolor="75aa6d">  <td>18/09/23 12:32:50</td>   <td>99432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.NewTest()[pri:0, instance:NKpackage.NewTest@4b14c583]">NewTest</td> 
+  <td>TestNG@167727108</td>   <td></td> </tr>
+<tr bgcolor="75aa6d">  <td>18/09/23 12:32:54</td>   <td>103535</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:NKpackage.NewTest@4b14c583]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@167727108</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>18/09/23 12:33:06</td>   <td>115935</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest1.beforeTest(java.lang.String)[pri:0, instance:NKpackage.NewTest1@3c419631]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@167727108</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>18/09/23 12:33:10</td>   <td>119522</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest1.NewTest1()[pri:0, instance:NKpackage.NewTest1@3c419631]">NewTest1</td> 
+  <td>TestNG@167727108</td>   <td></td> </tr>
+<tr bgcolor="82f9e2">  <td>18/09/23 12:34:37</td>   <td>206460</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest1.afterTest()[pri:0, instance:NKpackage.NewTest1@3c419631]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@167727108</td>   <td></td> </tr>
 </table>
