--- a/test-output/index.html
+++ b/test-output/index.html
@@ -218,16 +218,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'NewTest1')
 data.setCell(0, 2, 'NKpackage.NewTest1')
-data.setCell(0, 3, 86858);
+data.setCell(0, 3, 22316);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'NewTest')
 data.setCell(1, 2, 'NKpackage.NewTest')
-data.setCell(1, 3, 3438);
+data.setCell(1, 3, 13);
 window.suiteTableData['Test_Suite']= { tableData: data, tableDiv: 'times-div-Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 22 seconds</span>
               <div id="times-div-Test_Suite">
               </div> <!-- times-div-Test_Suite -->
             </div> <!-- times-div -->
@@ -272,26 +272,26 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">NewTest</span>
-                <span class="method-start">99439 ms</span>
+                <span class="method-start">2494 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">103534 ms</span>
+                <span class="method-start">2984 ms</span>
               </div> <!-- configuration-test after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">NKpackage.NewTest1</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">beforeTest(Chrome)</span>
-                <span class="method-start">115942 ms</span>
+                <span class="method-start">4649 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">NewTest1</span>
-                <span class="method-start">119530 ms</span>
+                <span class="method-start">8055 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">206457 ms</span>
+                <span class="method-start">30490 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
