--- a/ExtentReports/ExtentReportResults.html
+++ b/ExtentReports/ExtentReportResults.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2019-01-19 18:20:39</span>
+					<span class='suite-started-time'>2019-01-20 09:49:24</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 31s+734ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 25s+99ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 31s+734ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 25s+99ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2019-01-19 18:20:08</span> 
+							<span class='panel-lead suite-started-time'>2019-01-20 09:48:59</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2019-01-19 18:20:39</span> 
+							<span class='panel-lead suite-ended-time'>2019-01-20 09:49:24</span> 
 						</div> 
 					</div>
 				</div>
@@ -168,7 +168,7 @@
 								<tbody>
 										<tr>
 											<td>User Name</td>
-											<td>nagesh</td>
+											<td>SHIVCHINDAMBAR$</td>
 										</tr>
 										<tr>
 											<td>OS</td>
@@ -237,59 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='29eff0ff-6635-4345-9f1d-a41776c366e3'>
-											<div class='test-head'>
-												<span class='test-name'>IETest </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide '></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-01-19 18:20:08</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:20:10</td>
-																	<td class='step-details'>test started with browserIE</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:20:10</td>
-																	<td class='step-details'>NSE application lauched</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:20:10</td>
-																	<td class='step-details'>NewTest</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:20:12</td>
-																	<td class='step-details'>NSE application closed</td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='f251fc48-512f-475b-817f-2134996f39d3'>
+										<li class='collection-item test displayed active pass ' extentid='e8534ae6-f7df-4b51-a1e4-a5d32f7d5bb4'>
 											<div class='test-head'>
 												<span class='test-name'>Chrometest </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -297,7 +245,7 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-01-19 18:20:12</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2019-01-20 09:48:59</span>
 													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
 												</div>
@@ -316,28 +264,8 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:20:16</td>
-																	<td class='step-details'>test started with browserChrome</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:20:38</td>
-																	<td class='step-details'>NSE application lauched</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:20:38</td>
-																	<td class='step-details'>NSE - National Stock Exchange of India Ltd.</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:20:38</td>
-																	<td class='step-details'>NewTest1</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:20:39</td>
-																	<td class='step-details'>NSE application Closed</td>
+																	<td class='timestamp'>09:49:23</td>
+																	<td class='step-details'>Test skipped reported</td>
 																</tr>
 														</tbody>
 													</table>
