--- a/test-output/old/Test Suite/methods-alphabetical.html
+++ b/test-output/old/Test Suite/methods-alphabetical.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="81a1bc">  <td>19/01/19 18:20:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.NewTest()[pri:0, instance:NKpackage.NewTest@3a82f6ef]">NewTest</td> 
-  <td>TestNG@2076216077</td>   <td></td> </tr>
-<tr bgcolor="78c790">  <td>19/01/19 18:20:16</td>   <td>5561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest1.NewTest1()[pri:0, instance:NKpackage.NewTest1@6767c1fc]">NewTest1</td> 
-  <td>TestNG@2076216077</td>   <td></td> </tr>
-<tr bgcolor="81a1bc">  <td>19/01/19 18:20:11</td>   <td>501</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:NKpackage.NewTest@3a82f6ef]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2076216077</td>   <td></td> </tr>
-<tr bgcolor="78c790">  <td>19/01/19 18:20:38</td>   <td>27998</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest1.afterTest()[pri:0, instance:NKpackage.NewTest1@6767c1fc]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2076216077</td>   <td></td> </tr>
-<tr bgcolor="81a1bc">  <td>19/01/19 18:20:08</td>   <td>-2490</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest(java.lang.String)[pri:0, instance:NKpackage.NewTest@3a82f6ef]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2076216077</td>   <td></td> </tr>
-<tr bgcolor="78c790">  <td>19/01/19 18:20:12</td>   <td>2155</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest1.beforeTest(java.lang.String)[pri:0, instance:NKpackage.NewTest1@6767c1fc]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2076216077</td>   <td></td> </tr>
+<tr bgcolor="da9e97">  <td>??/??/?? ??:??:??</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest1.NewTest1()[pri:0, instance:NKpackage.NewTest1@2aafb23c]">NewTest1</td> 
+  <td>TestNG-tests-1@2031016788</td>   <td></td> </tr>
+<tr bgcolor="da9e97">  <td>??/??/?? ??:??:??</td>   <td>-24540</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest1.beforeTest(java.lang.String)[pri:0, instance:NKpackage.NewTest1@2aafb23c]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2031016788</td>   <td></td> </tr>
 </table>
